@@ -25,6 +25,7 @@
 #endif
 
 SETTING(autoSaveIntervalMinutes     , AutoSaveIntervalMinutes     , "settings/autosaveminutes"              , 5)
+SETTING(cancelDeselects             , CancelDeselects             , "settings/canceldeselects"              , true)
 SETTING(checkerColor1               , CheckerColor1               , "settings/checkercolor1"                , CHECKER_COLOR1_DEFAULT)
 SETTING(checkerColor2               , CheckerColor2               , "settings/checkercolor2"                , CHECKER_COLOR2_DEFAULT)
 SETTING(interpolateInputs           , InterpolateInputs           , "settings/input/interpolate"            , true)
